--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           </li>
           <li>
             <a href="https://www.linkedin.com/in/frasamalpushp/ " class="social-link">
-              <span>LinkedIn</span>
-            </a>
+              <ion-icon name="logo-linkedin"></ion-icon>            </a>
           </li>
 
         </ul>
@@ -103,7 +102,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/DALL·E 2024-02-03 18.11.04 - Create an image of a sophisticated, professional avatar that represents a physicist, with elements like atomic structures, galaxies, and mathematical .webp" width="330" height="340" alt="Amal" class="w-75"
+            <img src="./assets/images/DALL·E 2024-02-03 18.11.04 - Create an image of a sophisticated, professional avatar that represents a physicist, with elements like atomic structures, galaxies, and mathematical .webp" width="560" height="540" alt="Amal" class="w-75"
               data-reveal="top" style="border-radius: 60px;">
           </figure>
 
@@ -140,10 +139,6 @@ I'm Amal Pushp, associated with the Royal Astronomical Society, on a quest to de
 
             <div data-reveal="left">
               <h2 class="h2 section-title">What I Do?</h2>
-
-              <p class="section-text">
-                Research Physicist with over 3 years of experience in R&D organizations with strong interests in quantum foundations, quantum information and cosmology.
-              </p>
             </div>
 
             <ul class="progress-list" data-reveal="right">
@@ -384,6 +379,97 @@ I'm Amal Pushp, associated with the Royal Astronomical Society, on a quest to de
 
 
 
+            <!-- 
+        - #Services
+      -->
+
+      <section class="section about" aria-label="about">
+        <div class="container">
+
+          <div class="wrapper">
+
+            <div data-reveal="left">
+              <h2 class="h2 section-title">Services</h2>
+              <p class="card-text">
+                For any of the services mentioned below, I'm dedicated to assisting you in reaching your scientific objectives. Please feel free to reach out to discuss pricing.
+              </p>
+            </div>
+
+            
+
+          </div>
+
+          <ul class="grid-list">
+            <li data-reveal="bottom">
+              <div class="about-card">
+
+                <div class="card-icon">
+                  <img src="./assets/icons/publication.webp" width="52" height="52" loading="lazy" alt="web design icon">
+                </div>
+
+                <h3 class="h4 card-title">Publication</h3>
+
+                <p class="card-text">
+                  Are you looking to bring your physics ideas to publication? Look no further! I specialize in guiding your concepts through the intricate stages of academic publishing, ensuring your work reaches its full potential.
+                </p>
+
+              </div>
+            </li>
+
+            <li data-reveal="bottom" data-reveal-delay="0.25s">
+              <div class="about-card">
+
+                <div class="card-icon">
+                  <img src="./assets/icons/blogs.webp" width="52" height="52" loading="lazy" alt="mobile design icon">
+                </div>
+
+                <h3 class="h4 card-title">Blogs</h3>
+
+                <p class="card-text">
+                  Need your insights crafted within the context of ongoing mainstream research? My expertise in scientific blogging will elegantly integrate your ideas into the broader scientific discourse, amplifying their impact and visibility.
+                </p>
+
+              </div>
+            </li>
+
+            <li data-reveal="bottom" data-reveal-delay="0.5s">
+              <div class="about-card">
+
+                <div class="card-icon">
+                  <img src="./assets/icons/scientific-network.webp" width="52" height="52" loading="lazy"
+                    alt="web development icon">
+                </div>
+
+                <h3 class="h4 card-title">Scientific Network</h3>
+
+                <p class="card-text">
+                  Accessing a network of scientific experts can be invaluable. With me, you gain entry to my extensive network, providing valuable feedback and collaboration opportunities to enrich your projects.
+                </p>
+
+              </div>
+            </li>
+
+            <li data-reveal="bottom" data-reveal-delay="0.75s">
+              <div class="about-card">
+
+                <div class="card-icon">
+                  <img src="./assets/icons/dissemation.webp" width="52" height="52" loading="lazy" alt="web seo icon">
+                </div>
+
+                <h3 class="h4 card-title">Dissemination</h3>
+
+                <p class="card-text">
+                  Effective science communication is key to sharing your discoveries with the world. Let me assist you with science communication strategies and dissemination techniques, ensuring your work reaches the widest audience possible.
+                </p>
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
+      </section>
+
+
 
       <!-- 
         - #CONTACT
@@ -444,16 +530,10 @@ I'm Amal Pushp, associated with the Royal Astronomical Society, on a quest to de
 
   <footer class="footer">
     <div class="container">
-
-
-
-
       <p class="copyright">
         © 2024 amal. All rights reserved.
       </p>
-
       <ul class="social-list">
-
         <li>
           <a href="https://twitter.com/AmalPushp4" class="social-link">
             <ion-icon name="logo-twitter"></ion-icon>
@@ -473,8 +553,7 @@ I'm Amal Pushp, associated with the Royal Astronomical Society, on a quest to de
 
          <li>
             <a href="https://www.linkedin.com/in/frasamalpushp/ " class="social-link">
-              <span>LinkedIn</span>
-            </a>
+              <ion-icon name="logo-linkedin"></ion-icon>            </a>
           </li>
 
       </ul>
