--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 Exploring the cosmos, one theory at a time            </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-I'm Amal Pushp, associated with the Royal Astronomical Society, on a quest to decode the universe's fundamental truths through physics and cosmology.
+I'm <strong>Amal Pushp</strong>, associated with the Royal Astronomical Society, on a quest to decode the universe's fundamental truths through physics and cosmology.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
